--- a/.github/ISSUE_TEMPLATE/bug_template.yml
+++ b/.github/ISSUE_TEMPLATE/bug_template.yml
@@ -11,7 +11,7 @@ body:
       required: true
   - type: dropdown
     attributes:
-      label: Choose the related component
+      label: Related component
       description: Choose one specific OpenSearch component your problem belongs to.
       multiple: false
       options:
