Add missing labels - Clients, Libraries, Build
Signed-off-by: Marc Handalian <marc.handalian@gmail.com>

--- a/.github/ISSUE_TEMPLATE/bug_template.yml
+++ b/.github/ISSUE_TEMPLATE/bug_template.yml
@@ -15,12 +15,14 @@ body:
       description: Choose a specific OpenSearch component your bug belongs to.  If you are unsure which to select or if the component is not present, select "Other".
       multiple: false
       options:
-        - Build Libraries & Interfaces
+        - Build
+        - Clients
         - Cluster Manager
         - Extensions
         - Indexing
         - Indexing:Performance
         - Indexing:Replication
+        - Libraries
         - Other
         - Plugins
         - Search
