--- a/libs/arrow/build.gradle
+++ b/libs/arrow/build.gradle
@@ -25,10 +25,10 @@ dependencies {
   }
   runtimeOnly 'com.google.flatbuffers:flatbuffers-java:2.0.0'
 
-  runtimeOnly 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
-  runtimeOnly 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.2'
-  runtimeOnly 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2'
-  runtimeOnly 'com.fasterxml.jackson.core:jackson-annotations:2.17.2'
+  api 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+  api 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.2'
+  api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2'
+  api 'com.fasterxml.jackson.core:jackson-annotations:2.17.2'
 
   testImplementation "com.carrotsearch.randomizedtesting:randomizedtesting-runner:${versions.randomizedrunner}"
   testImplementation "junit:junit:${versions.junit}"
