Update dependencies and license files

--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -1,2 +1,6 @@
 # Please use ../gradle/libs.versions.toml for dependency management
 opensearch        = 3.0.0-alpha
+
+# arrow dependencies
+arrow                 = 17.0.0
+flatbuffers           = 2.0.0
