--- a/gradle/missing-javadoc.gradle
+++ b/gradle/missing-javadoc.gradle
@@ -96,6 +96,7 @@ configure([
   project(":client:client-benchmark-noop-api-plugin"),
   project(":client:rest-high-level"),
   project(":client:test"),
+  project(":libs:opensearch-datafusion"),
   project(":libs:opensearch-cli"),
   project(":libs:opensearch-dissect"),
   project(":libs:opensearch-geo"),
