--- a/libs/datafusion/build.gradle
+++ b/libs/datafusion/build.gradle
@@ -9,6 +9,7 @@
 dependencies {
   api project(':libs:opensearch-common')
   api project(':libs:opensearch-arrow')
+  api 'org.apache.arrow:arrow-c-data:17.0.0'
 
   // logging
   implementation "org.apache.logging.log4j:log4j-api:${versions.log4j}"
