--- a/libs/datafusion/jni/Cargo.toml
+++ b/libs/datafusion/jni/Cargo.toml
@@ -5,16 +5,15 @@ edition = "2021"
 
 [dependencies]
 jni = "0.21.1"
-datafusion = "42.0.0"
-datafusion-table-providers = { version = "0.2.2", features = ["flight"] }
-tokio = { version = "1.0", features = ["full"] }
-arrow = "53.1.0"
-arrow-flight = "53.1.0"
+datafusion = "42.1.0"
+datafusion-table-providers = { version = "0.2.3", features = ["flight"] }
+tokio = { version = "1.41.0", features = ["full"] }
+arrow = { version = "53.2.0", features = ["ffi" ] }
+arrow-flight = "53.2.0"
 futures = "0.3"
-serde_json = "1.0"
+serde_json = "1.0.132"
 tonic = "0.12.3"
-bytes = "1.0"
+bytes = "1.8.0"
 
 [lib]
 crate_type = ["cdylib"]
-
