--- a/plugins/arrow-flight-rpc/build.gradle
+++ b/plugins/arrow-flight-rpc/build.gradle
@@ -34,6 +34,8 @@ dependencies {
   runtimeOnly 'org.apache.parquet:parquet-arrow:1.13.1'
   runtimeOnly "io.grpc:grpc-protobuf-lite:${versions.grpc}"
   runtimeOnly "io.grpc:grpc-protobuf:${versions.grpc}"
+  runtimeOnly "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}"
+  runtimeOnly "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
 
   runtimeOnly "com.google.guava:failureaccess:1.0.1"
   compileOnly "com.google.errorprone:error_prone_annotations:2.31.0"
@@ -53,6 +55,7 @@ tasks.named('test').configure {
 tasks.named("dependencyLicenses").configure {
   mapping from: /netty-.*/, to: 'netty'
   mapping from: /grpc-.*/, to: 'grpc'
+  mapping from: /jackson-.*/, to: 'jackson'
 }
 
 tasks.named('forbiddenApisMain').configure {
