intermediate commit before merge
Signed-off-by: Harsha Vamsi Kalluri <harshavamsi096@gmail.com>

--- a/modules/arrow-flight/build.gradle
+++ b/modules/arrow-flight/build.gradle
@@ -16,8 +16,8 @@ apply plugin: 'opensearch.internal-cluster-test'
 apply plugin: 'opensearch.publish'
 
 opensearchplugin {
-  description 'Arrow flight based Stream implementation'
-  classname 'org.opensearch.flight.FlightStreamPlugin'
+  description = 'Arrow flight based Stream implementation'
+  classname = 'org.opensearch.flight.FlightStreamPlugin'
 }
 
 dependencies {
