--- a/server/build.gradle
+++ b/server/build.gradle
@@ -37,7 +37,6 @@ plugins {
   id('opensearch.internal-cluster-test')
   id('opensearch.optional-dependencies')
   id('me.champeau.gradle.japicmp') version '0.4.5'
-  id('com.github.johnrengelman.shadow')
 }
 
 publishing {
@@ -70,8 +69,9 @@ dependencies {
   api project(":libs:opensearch-geo")
   api project(":libs:opensearch-telemetry")
   api project(":libs:opensearch-task-commons")
-  api project(':libs:opensearch-arrow')
   api project(':libs:opensearch-datafusion')
+
+  implementation project(':libs:opensearch-arrow-spi')
 
   compileOnly project(':libs:opensearch-plugin-classloader')
   testRuntimeOnly project(':libs:opensearch-plugin-classloader')
