--- a/libs/build.gradle
+++ b/libs/build.gradle
@@ -45,6 +45,7 @@ subprojects {
         Project depProject = project.project(dep.path)
         if (depProject != null
           && (false == depProject.path.equals(':libs:opensearch-core') && false == depProject.path.equals(':libs:opensearch-arrow-memory-shaded') &&
+              false == depProject.path.equals(':libs:opensearch-arrow-spi') &&
               false == depProject.path.equals(':libs:opensearch-common'))
           && depProject.path.startsWith(':libs')) {
           throw new InvalidUserDataException("projects in :libs "
