--- a/server/build.gradle
+++ b/server/build.gradle
@@ -71,6 +71,8 @@ dependencies {
   api project(":libs:opensearch-task-commons")
 
   implementation project(':libs:opensearch-arrow-spi')
+  implementation project(':libs:opensearch-datafusion')
+
 
   compileOnly project(':libs:opensearch-plugin-classloader')
   testRuntimeOnly project(':libs:opensearch-plugin-classloader')
