--- a/libs/datafusion/jni/Cargo.toml
+++ b/libs/datafusion/jni/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0.132"
 tonic = "0.12.3"
 bytes = "1.8.0"
 async-trait = "0.1"
+num_cpus = "1.16"
 
 [dev-dependencies]
 anyhow = "1.0"
