--- a/libs/datafusion/jni/Cargo.toml
+++ b/libs/datafusion/jni/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 jni = "0.21.1"
 datafusion = "44.0.0"
+datafusion-substrait = "44.0.0"
 datafusion-table-providers = { version = "0.2.2", features = ["flight"] }
 tokio = { version = "1.41.0", features = ["full"] }
 arrow = { version = "53.1.0", features = ["ffi" ] }
@@ -16,6 +17,7 @@ tonic = "0.12.3"
 bytes = "1.8.0"
 async-trait = "0.1"
 num_cpus = "1.16"
+rand = "0.8"
 
 [dev-dependencies]
 anyhow = "1.0"
@@ -32,3 +34,6 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [lib]
 crate_type = ["cdylib"]
+
+[profile.release]
+debug = true
